# plonex

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  checkmake.ini  constraints.txt  pyproject.toml
src/plonedeployment/: _logger.py  base.py  cli.py  template.py
src/plonedeployment/install/: __init__.py
src/plonedeployment/supervisor/: __init__.py
src/plonedeployment/zeoclient/: __init__.py
src/plonedeployment/zeoclient/templates/: instance.j2  interpreter.j2  wsgi.ini.j2  zope.conf.j2
src/plonedeployment/zeoserver/: __init__.py
src/plonedeployment/zeoserver/templates/: runzeo.j2
src/plonex/: __init__.py  _logger.py  base.py  cli.py  config.py
src/plonex/cli/: __init__.py  __main__.py  db.py  dependencies.py  parser.py  runtime.py  setup_info.py  testing.py
src/plonex/compile/: __init__.py
src/plonex/describe/: __init__.py
src/plonex/describe/templates/: plonex_description.md.j2
src/plonex/directory/: __init__.py
src/plonex/init/: __init__.py
src/plonex/init/templates/: default_constraints.txt.j2  default_requirements.txt.j2  plonex.yml.j2
src/plonex/install/: __init__.py
src/plonex/profile/: __init__.py
src/plonex/robotserver/: __init__.py
src/plonex/robottest/: __init__.py
src/plonex/services/: __init__.py
src/plonex/services/adduser/: __init__.py
src/plonex/services/compile/: __init__.py
src/plonex/services/describe/: __init__.py
src/plonex/services/init/: __init__.py
src/plonex/services/init/templates/: default_requirements.txt.j2  plonex.yml.j2
src/plonex/services/install/: __init__.py
src/plonex/services/runwsgi/: __init__.py
src/plonex/services/sources/: __init__.py
src/plonex/services/supervisor/: __init__.py
src/plonex/services/supervisor/templates/: supervisord.conf.j2
src/plonex/services/template/: __init__.py
src/plonex/services/upgrade/: __init__.py
src/plonex/services/zconsole/: __init__.py
src/plonex/services/zeoclient/: __init__.py
src/plonex/services/zeoclient/templates/: instance.j2  zope.conf.j2
src/plonex/services/zeoserver/: __init__.py
src/plonex/services/zeoserver/templates/: zeo.conf.j2
src/plonex/services/zope_configuration/templates/: site.zcml.j2  zope.conf.j2
src/plonex/services/zopetest/: __init__.py
src/plonex/sources/: __init__.py
src/plonex/supervisor/: __init__.py
src/plonex/supervisor/templates/: program.conf.j2  supervisord.conf.j2
src/plonex/template/: __init__.py
src/plonex/test/: __init__.py
src/plonex/zeoclient/: __init__.py
src/plonex/zeoclient/templates/: instance.j2  interpreter.j2  site.zcml.j2  wsgi.ini.j2  zope.conf.j2
src/plonex/zeoserver/: __init__.py
src/plonex/zeoserver/templates/: zeo.conf.j2
src/plonex/zopetest/: __init__.py
tests/: test_adduser.py  test_base.py  test_cli.py  test_client.py  test_compile.py  test_config.py  test_describe.py  test_directory.py  test_gitman.py  test_init.py  test_install.py  test_robotserver.py  test_robottest.py  test_runwsgi.py  test_supervisor.py  test_template.py  test_upgrade.py  test_zconsole.py  test_zeoserver.py  test_zopetest.py  utils.py
tests/expected/runwsgi/: test_zope_conf
tests/expected/supervisor/: test_supervisord_conf
tests/expected/zconsole/: test_zope_conf_debug  test_zope_conf_run
tests/expected/zeoclient/: test_zope_conf
tests/expected/zeoserver/: test_zeo_conf
tests/sample_confs/: example_constraints.txt  zeoclient_bogus.yml
tests/sample_confs/additional_zcmls/: bar.zcml.j2
tests/sample_confs/additional_zope_confs/: bar.conf.j2  foo.conf.j2
