[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plonex"
description = "Deploy a Plone site based on some configuration files"
readme = "README.md"
license = {text = "GPL-3.0"}
keywords = ["plone", "deployment"]
version = "0.1.0"
requires-python = ">=3.8"
authors = [
    { name="Alessandro Pisa", email="pisa@syslab.com" },
]
maintainers = [
    { name="Alessandro Pisa", email="pisa@syslab.com" },
]
dependencies = [
    "gitman",
    "Jinja2",
    "PyYAML",
    "plone.recipe.zope2instance",
    "rich-argparse",
    "supervisor",
    "types-PyYAML",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
plonex = "plonex:cli.main"

[project.urls]
Homepage = "https://tbd"
Documentation = "https://tbd"
Repository = "https://tbd"
Issues = "https://tbd"
Changelog = "https://tbd"

[project.optional-dependencies]
test = ["mypy", "pytest", "pytest-cov"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "plone"
