[build-system]
requires = ["uv_build >= 0.9.8"]
build-backend = "uv_build"

[project]
name = "plonex"
description = "Deploy a manage Plone site based on some configuration files"
readme = "README.md"
license = {text = "GPL-3.0"}
keywords = ["plone", "deployment"]
version = "0.1.0"
requires-python = ">=3.8"
authors = [
    { name="Alessandro Pisa", email="pisa@syslab.com" },
]
maintainers = [
    { name="Alessandro Pisa", email="pisa@syslab.com" },
]
dependencies = [
    "argcomplete",
    "Jinja2",
    "pip-requirements-parser",
    "PyYAML",
    "requests",
    "rich-argparse",
    "sh",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
plonex = "plonex:cli.main"

[project.urls]
Homepage = "https://github.com/collective/plonex"
Documentation = "https://github.com/collective/plonex/wiki"
Repository = "https://github.com/collective/plonex"
Issues = "https://github.com/collective/plonex/issues"
Changelog = "https://github.com/collective/plonex/CHANGELOG.md"

[project.optional-dependencies]
test = ["mypy", "pytest", "pytest-cov", "supervisor"]

[tool.black]
line-length = 88
target-version = 'py39'

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "plone"
